# bible-study-tool-app-tauri

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
src/: App.test.tsx  App.tsx  App2.old.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: database.rs  lib.rs  main.rs
src-tauri/src/database/: bible.rs
src/app/: api.ts  shortcuts.ts  store.ts
src/components/: Tabs.css  Tabs.tsx
src/components-ui/: BibleViewTabs.tsx  BookList.css  BookList.tsx  BookPopupSelector.tsx  Button.tsx  ChapterList.tsx  ChapterPopupSelector.tsx  ContentBoard.tsx  Dialog.tsx  DropDownButton.tsx  Layout.tsx  Modal.tsx  Sidebar.css  Sidebar.tsx  SidebarCoumn.tsx  SidebarIcon.tsx  SwitchButton.css  SwitchButton.tsx  Tabs.css  Tabs.tsx  TextInputDropDown.tsx  VerseList.tsx  VersionDropDown.css  VersionDropDown.tsx
src/components-ui/BibleSelector/: BibleDropDown.tsx  BibleSelector.css  BibleSelector.tsx  BibleSelectorContextProvider.tsx  BibleSelectorItem.tsx  BibleSelectorPanelCloser.tsx  BookDropDown.tsx  BookList.tsx  BookPopupSelector.tsx  ChapterDropDown.tsx  ChapterList.tsx  ChapterPopupSelector.tsx  VerseDropDown.tsx  VerseList.tsx  VersePopupSelector.tsx  all-books.json  index.tsx
src/components-ui/Button/: Button.tsx  GradientButton.tsx  IconButton.tsx  OutlineButton.tsx
src/components-ui/Sidebar/: Sidebar.css  Sidebar.tsx
src/components-ui/Tabs/: BibleViewTabs.tsx  TabItem.tsx  Tabs.css  Tabs.tsx
src/utils/: book-filter.tsx  checker.ts
(+13 files in other folders)
