[package]
name = "bible-study-tool-app"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3.0", features = ["global-shortcut-all", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# rusqlite = { version = "0.29.0", features = ["load_extension"] }
rusqlite = "0.29.0"
# sqlite-regex-replace-ext = "0.1.0"
objc = "0.2.7"
cocoa = "0.24.1"
strum = "0.24"
strum_macros = "0.24"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
